Fix: corrige bug de overflow em meses que começam sexta ou sabado

--- a/zapagenda/src/components/Calendario/Calendario.css
+++ b/zapagenda/src/components/Calendario/Calendario.css
@@ -1,4 +1,3 @@
-/* Calendario.css */
 .calendario {
   width: 100%;
   max-width: 1200px;
@@ -7,12 +6,15 @@
   box-sizing: border-box;
   border-radius: 10px;
   max-height: 770px;
+  overflow-y: auto; /* Adiciona rolagem vertical quando o conteúdo extrapolar */
+  overflow-x: hidden; /* Previne a rolagem horizontal */
 }
 
 .container-cabecalho-calendario {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap; /* Para suportar layouts mais compactos */
 }
 
 @media (max-width: 768px) {
